infra/k8s/timeout-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeout-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeout
  template:
    metadata:
      labels:
        app: timeout
    spec:
      containers:
        - name: timeout
          image: davidhume/timeout
