infra/k8s/dreamtickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dreamtickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamtickets
  template:
    metadata:
      labels:
        app: dreamtickets
    spec:
      containers:
        - name: dreamtickets
          image: davidhume/dreamtickets
---
apiVersion: v1
kind: Service
metadata:
  name: dreamtickets-srv
spec:
  selector:
    app: dreamtickets
  ports:
    - name: dreamtickets
      protocol: TCP
      port: 3000
      targetPort: 3000
