infra/k8s/fundings-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fundings-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fundings
  template:
    metadata:
      labels:
        app: fundings
    spec:
      containers:
        - name: fundings
          image: davidhume/fundings
---
apiVersion: v1
kind: Service
metadata:
  name: fundings-srv
spec:
  selector:
    app: fundings
  ports:
    - name: fundings
      protocol: TCP
      port: 3000
      targetPort: 3000
