infra/k8s/mailing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailing
  template:
    metadata:
      labels:
        app: mailing
    spec:
      containers:
        - name: mailing
          image: davidhume/mailing
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mailing-srv
spec:
  selector:
    app: mailing
  ports:
    - name: mailing
      protocol: TCP
      port: 8080
      targetPort: 8080
